# tightbinder

./: .gitignore  .readthedocs.yaml  README.md  bethe_entanglement.csv  crystal.py  cube.txt  fileparse.py  hamiltonian.py  log.080721_wilson2d_30x30_1  main.py  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py  topology.py  wilson_2d_diagram_L10_gap  wilson_2d_diagram_L20_gap_r11
data/: bethe_edge_occupation  bethe_gap_diagram  coordination_L30  edge_occupation_r11_L30  edge_occupation_r14_L30  gap_r11_spread_03
docs/: requirements.txt
docs/source/: conf.py  config.rst  index.rst  install.rst  tightbinder.rst
examples/: 2band_insulator.txt  Bi(111).txt  Bi(111)_2nn.txt  Bi111.txt  Bi111_2nn.txt  GaSe.txt  GeS.txt  MoS2.txt  MoS2_Ridolfi.txt  MoS2_Silva.txt  MoS2_VB.txt  MoS2_roldan.txt  Sb(111).txt  Sb(111)_2nn.txt  Sb111_2nn.txt  amorphous_slater_koster.py  band_structure.py  bands_ribbon_bi111.py  bi(111).txt  bi(111)_nosoc.txt  bi(111)_soc.txt  chain.txt  cube.txt  density_states.py  density_states_kpm.py  edge_state.py  entanglement_spectrum.py  germanene.txt  graphene.txt  hBN.txt  hBN_dft.txt  hBN_minimal.txt  paper_plot.py  phase_diagram_bi111.py  planarBi.txt  planarSb.txt  square.txt  transport_hydrogen_nanotube.py  transport_hydrogen_ribbon.py  wannier_charge_bi111.py
examples/inputs/: Bi111.yaml  Bi111_2nn.yaml  MoS2_Ridolfi.yaml  MoS2_Silva.yaml  Sb111.txt  Sb111.yaml  Sb111_2nn.yaml  chain.txt  chain.yaml  (+7 more)
plot/: crystalline_diagram.py  find_gap_lines.py  gap_diagram.py  plot_diagram.py  plot_diagrams.py  plot_gap_diagram.py
scripts/: bethe_lattice.py  wilson_bands.py  wilson_coordination.py
tests/: README.txt  test_disorder.py  test_fileparse.py  test_models.py  test_observables.py  test_slaterkoster.py  test_topology.py
tightbinder/: baseclasses.py  chain.txt  crystal.py  crystalview.py  disorder.py  fileparse.py  hamiltonian.py  main.py  main_wilson.py  models.py  modifiers.py  observables.py  optimize.py  result.py  rsmodel.py  state.py  system.py  topology.py  utils.py  viewer.py
(+94 files in other folders)
